--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ body {
     margin: 0px;
 }
 
+.wid-33 {
+    width: 33.3%;
+}
+
 .logo h1 span:first-of-type {
     padding: 0px 18px;
     border: 1px solid #ccc;
@@ -244,22 +248,268 @@ ul .dropdown li {
     font-size: 16px;
     text-transform: uppercase;
 }
-.feature-point{
+
+.feature-point {
     margin-top: 30px;
     margin-bottom: 30px;
     border: 1px solid #ddd;
     margin-right: 30px;
 }
-.feature-point .icon-text-wrap i{
+
+.feature-point .icon-text-wrap i {
     font-size: 24px;
     margin-right: 16px;
-     color: #D19C97;;
-    
+    color: #D19C97;
+    ;
+
 }
-.icon-text-wrap{
+
+.icon-text-wrap {
     padding: 30px;
     display: flex
 }
-.icon-text-wrap span{
+
+.icon-text-wrap span {
     font-weight: 800;
+}
+
+.category-item {
+    border: 1px solid #ddd;
+    margin-top: 18px;
+    margin-right: 30px;
+    padding: 30px;
+    margin-bottom: 30px;
+}
+
+.category-image {
+    display: flex;
+    justify-content: center;
+}
+
+.category-image img {
+
+    height: 274px;
+}
+
+.product-count {
+    text-align: right;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 21px;
+}
+
+.category-type h5 {
+    margin-bottom: 0;
+    font-size: 25px;
+}
+
+.offer-banner {
+    background-color: #EDF1FF;
+    margin-bottom: 50px;
+    position: relative;
+    margin-right: 26px;
+}
+
+.offer-banner img {
+    position: absolute;
+    max-width: 50%;
+    max-height: 100%;
+    z-index: 100;
+    bottom: 0;
+    float: left;
+}
+
+.offer-banner .offer-text h5 {
+    text-transform: uppercase;
+    font-size: 23px;
+    font-weight: 400;
+    color: #D19C97;
+    margin-bottom: -9px;
+}
+
+.offer-banner .offer-text {
+    text-align: right;
+    padding: 40px;
+}
+
+.offer-banner .offer-text h3 {
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.offer-banner .offer-text button {
+    padding: 12px 27px;
+    color: #D19C97;
+    border: 1px solid #D19C97;
+    background-color: transparent;
+    cursor: pointer;
+    margin-right: 64px;
+}
+
+.card-details {
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 8px;
+}
+
+.cart img {
+    width: 100%;
+    height: 100%;
+}
+
+.cloth-price {
+    display: flex;
+    justify-content: center;
+}
+
+.card-details .style {
+    padding: 15px;
+    margin: 0;
+    text-align: center;
+    font-size: 19px;
+    font-weight: 600;
+    padding-bottom: 0px;
+}
+
+.current {
+    font-size: 15px;
+    font-weight: 400;
+    margin: 0;
+    padding: 5px;
+}
+
+.last {
+    font-size: 15px;
+    font-weight: 400;
+    margin: 0;
+    padding: 5px;
+    text-decoration: line-through;
+    color: #888;
+}
+
+.cart-footer {
+    justify-content: space-evenly;
+    display: flex;
+    padding: 8px;
+    font-size: 16px;
+}
+
+.card-details a {
+    color: #D19C97;
+}
+
+.cart {
+    border: 1px solid #ddd;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.cart-footer a {
+    color: #D19C97;
+}
+
+.cart-image {
+    height: 400px;
+}
+
+.stay-updated {
+    background-color: lightgray;
+    text-align: center;
+    margin-bottom: 100px;
+    padding-top: 30px;
+    padding-bottom: 63px;
+    padding-right: 32%;
+    padding-left: 32%;
+    margin-right: -5.5%;
+    margin-left: -5.5%;
+}
+
+.stay-updated p {
+    line-height: 2;
+    color: #666;
+}
+
+.email-updated {
+    flex: 100%;
+    height: 45px;
+    border: none;
+    border-radius: 0;
+    padding-left: 16px;
+    font-size: 21px;
+}
+
+.updated-inputs {
+    display: flex;
+}
+
+.updated-inputs button {
+    border-radius: 0;
+    background-color: #D19C97;
+    padding: 13px 30px;
+    font-size: 16px;
+    border: 1px solid #D19C97;
+    color: white;
+}
+
+.content-list {
+    list-style: none;
+}
+
+.content-list li i {
+    color: #D19C97;
+    margin-right: 9px;
+}
+
+.footer {
+    background-color: rgb(243, 233, 241);
+    margin-right: -5.5%;
+    margin-left: -5.5%;
+    padding: 38px;
+    display: flex;
+}
+
+.content-list li {
+    margin-bottom: 6px;
+}
+
+.footer .logo {
+    margin-left: 27px;
+}
+
+.quick-links ul {
+    list-style: none;
+}
+
+.quick-links ul li i {
+    padding-right: 7px;
+}
+
+.quick-links h3 {
+    margin-left: 20px;
+    margin-bottom: 0;
+}
+
+.footer-input {
+    border-radius: 0;
+    border: none;
+    height: 40px;
+    font-size: 20px;
+    margin-bottom: 21px;
+    width: 87%;
+}
+
+.footer-button {
+    width: 87%;
+    height: 40px;
+    background-color: #D19C97;
+    border: none;
+    color: white;
+    font-size: 23px;
+}
+.vendors{
+    display: flex;
+    height: 173px;
+    width: 100%;
+    margin-bottom: 54px;
+    justify-content: space-around;
 }
